<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CasosNinnosMenoresActivity"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datosgenerales"
            android:textAppearance="?android:attr/textAppearanceSearchResultTitle" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:padding="5dp"
            android:background="@android:color/darker_gray"
            android:paddingBottom="10dp"
            android:layout_marginTop="3dp"></View>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@drawable/list_item_text_selector"
            android:text="Nombre del Niño"
            android:id="@+id/txtnomNinoVisitaNino"
            android:layout_marginTop="5dp"
            android:textSize="20dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtEnfermedadVisitaNino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lugaratencion"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="14dp"
            android:textColor="@drawable/list_item_text_selector"
            android:layout_marginTop="3dp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:gravity="center" />

        <TextView
            android:id="@+id/txtTratamientoVisitaNino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lugaratencion"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="11dp"
            android:textColor="@drawable/list_item_text_selector"
            android:layout_marginTop="3dp"
            android:gravity="center" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/txtFechaVisitaNino"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textAlignment="center"
                android:enabled="false"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/fecnacmimiento"
                android:inputType="date"
                android:layout_gravity="bottom|center_horizontal"
                android:gravity="center_horizontal" />

            <ImageButton
                android:id="@+id/btnFechaVisitaNino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/hello_world"
                android:src="@android:drawable/ic_menu_my_calendar"
                android:visibility="gone" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Madre o familia cumplió con la referencia:"
                android:layout_gravity="center_vertical"
                android:layout_weight="3" />

            <ToggleButton
                android:id="@+id/tbn_CumpMedRectNino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello_world"
                android:textOff="@string/no"
                android:textOn="@string/si"

                android:layout_gravity="right" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:padding="5dp"
            android:background="@android:color/darker_gray"
            android:paddingBottom="10dp"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="El niño o niña está tomando la dosis indicada del medicamento:"
                android:layout_gravity="center_vertical"
                android:layout_weight="3" />

            <ToggleButton
                android:id="@+id/tbn_TomaDosisIndicadaNino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello_world"
                android:textOff="@string/no"
                android:textOn="@string/si"
                android:layout_gravity="right" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:padding="5dp"
            android:background="@android:color/darker_gray"
            android:paddingBottom="10dp"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Estado del niño(a):"
                android:layout_gravity="center_vertical" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:id="@+id/spnResultadoVisitaNino"
                android:spinnerMode="dialog" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:padding="5dp"
            android:background="@android:color/darker_gray"
            android:paddingBottom="10dp"></View>

        <TextView
            android:id="@+id/txtObservacionesVisitaNino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Observaciones:"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="14dp"
            android:textColor="@drawable/list_item_text_selector"
            android:layout_marginTop="10dp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/txtObservacionesNino"
            android:textSize="12dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/btn_blue"
            style="@style/ButtonText"
            android:text="Guardar"
            android:id="@+id/btnGuardarVisitaNino"
            android:layout_marginTop="8dp" />

    </LinearLayout>

</ScrollView>
