<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="I. Tratamiento"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceSearchResultTitle" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:padding="5dp"
            android:background="@android:color/darker_gray"
            android:paddingBottom="10dp"></View>

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1.1. Tratamiento"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="14dp"
            android:textColor="@drawable/list_item_text_selector"
            android:layout_marginTop="3dp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:id="@+id/spnTratamiento"
            android:spinnerMode="dialog"

            android:layout_gravity="center_vertical" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1.2. Dosis"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="14dp"
            android:textColor="@drawable/list_item_text_selector"
            android:layout_marginTop="3dp"
            android:textStyle="bold" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:id="@+id/spnPreguntaTratamiento"
            android:spinnerMode="dialog" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1.3. Recomendaciones"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="14dp"
            android:textColor="@drawable/list_item_text_selector"
            android:layout_marginTop="3dp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:enabled="false"
            android:ems="10"
            android:id="@+id/txtRecomendaciones"
            android:textSize="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1.4. Entrego Referencia"
                android:layout_gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="14dp"
                android:textColor="@drawable/list_item_text_selector"
                android:textStyle="bold"
                android:layout_weight="3" />

            <ToggleButton
                android:id="@+id/tbn_entregoReferencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello_world"
                android:textOff="@string/no"
                android:textOn="@string/si"

                android:layout_gravity="right" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:padding="5dp"
            android:background="@android:color/darker_gray"
            android:paddingBottom="10dp"></View>

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1.5. Observaciones"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="14dp"
            android:textColor="@drawable/list_item_text_selector"
            android:layout_marginTop="3dp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/txtObservaciones"
            android:textSize="12dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/btn_blue"
            style="@style/ButtonText"
            android:text="Guardar"
            android:id="@+id/btnGuardarCasoNinoMenor"
            android:layout_marginTop="5dp" />

    </LinearLayout>


</ScrollView>